...
  // -----------------------------------------------------------------------
  // Loading State
  // -----------------------------------------------------------------------

  if (isLoading) {
    return (
      <View className="h-full bg-background" testID="series-details-screen">
        <NavBar onPressLeading={props.goBack} trainlingIcon={[]} />
        <ScrollView
          contentContainerStyle={LOADING_SCROLL_CONTENT_STYLE}
          showsVerticalScrollIndicator={false}
        >
          <View style={LOADING_CONTENT_STYLE}>
...
