...
    },
    [watchlistKeys]
  );

  return (
    <SearchScreenContainer
      testID="search-screen"
      className="flex-1 w-full h-full bg-background"
    >
      <View className="flex-1 w-full">
        <NavBar
          title={getText("search_title")}
          onPressLeading={props.onBack}
...
