appId: com.tico77.rnapp
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "home-root"
    timeout: 90000
- tapOn: "Favorites"
- extendedWaitUntil:
    visible:
      id: "favorites-screen"
    timeout: 60000
- tapOn: "Home"
- assertVisible:
    id: "home-root"
