appId: com.tico77.rnapp
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "home-root"
    timeout: 90000
- tapOn: "Watchlist"
- extendedWaitUntil:
    visible:
      id: "watchlist-screen"
    timeout: 60000
- tapOn: "Home"
- assertVisible:
    id: "home-root"
